Apply CICD Gitlab
Push to docker hub

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Mirrored from cv.tuanitpro.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 23 Sep 2019 09:37:33 GMT -->
-
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,18 +15,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-
-    <!-- Icon Fonts -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css/etlinefont.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
@@ -519,7 +505,7 @@
                                 style="visibility: visible; animation-name: zoomIn;">
                                 <h4>Jun 2018
                                     <br>-
-                                    <br>Present
+                                    <br>Feb 2020
                                 </h4>
                             </div>
                             <div class="timeline-panel wow fadeInRight animated animated"
