Update link github

--- a/web/index.html
+++ b/web/index.html
@@ -1261,7 +1261,7 @@
                         <li><a href="https://www.linkedin.com/in/tuanitpro/"><i
                                     class="fa fa-linkedin wow bounceIn animated"
                                     style="visibility: hidden; animation-name: none;"></i></a></li>
-                        <li><a href="https://twitter.com/tuanitpro"><i class="fa fa-github wow bounceIn animated"
+                        <li><a href="https://github.com/tuanitpro"><i class="fa fa-github wow bounceIn animated"
                                     style="visibility: hidden; animation-name: none;"></i></a></li>
                         <li><a href="index.html#"><i class="fa fa-dribbble wow bounceIn animated"
                                     style="visibility: hidden; animation-name: none;"></i></a></li>
